<resources>
    <string name="app_name" translatable="false">Safelet Parse</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="view">View</string>
    <string name="dismiss">Dismiss</string>
    <string name="please_wait">Please wait…</string>
    <string name="login_create_login">Log in</string>
    <string name="login_create_create">Create account</string>
    <string name="login_title">LOG IN</string>
    <string name="login_hint_email">Email address</string>
    <string name="login_error_emailwrong">Email wrong</string>
    <string name="login_hint_password">Password</string>
    <string name="login_error_passwordwrong">Password wrong</string>
    <string name="login_submit">Log in</string>
    <string name="login_register">Create account</string>
    <string name="login_forgot">Forgot password?</string>
    <string name="login_alert_message_emailcannotbeempty">Email address required</string>
    <string name="login_alert_message_passwordcannotbeempty">Password required</string>
    <string name="login_alert_message_incorrectemailaddress">Incorrect email address</string>
    <string name="signup_first_title">CREATE ACCOUNT</string>
    <string name="signup_first_hint_email">Email address</string>
    <string name="signup_first_error_emailalreadytaken">Email address is already taken</string>
    <string name="signup_first_hint_password">Password</string>
    <string name="signup_first_error_repeatpassword">Repeat password</string>
    <string name="signup_first_error_wrongpassword">Wrong password</string>
    <string name="signup_first_error_passwordweak">Password weak</string>
    <string name="signup_first_submit_createaccount">Create account</string>
    <string name="signup_first_login">Log in</string>
    <string name="signup_first_alert_message_emailcannotbeempty">Valid email required</string>
    <string name="signup_first_alert_message_passwordcannotbeempty">Valid password required</string>
    <string name="signup_first_alert_message_incorrectemailaddress">Invalid email address</string>
    <string name="signup_first_alert_message_passwordsdonotmatch">Passwords do not match</string>
    <string name="signup_first_alert_message_passwordweak">Password is weak</string>
    <string name="signup_first_alert_message_passwordgood">Password is good</string>
    <string name="signup_first_alert_message_passwordstrong">Password is strong</string>
    <string name="signup_first_alert_message_passwordexcelent">Password is excellent</string>
    <string name="signup_first_alert_message_passwordtoosmall">Password is too short</string>
    <string
        name="signup_first_alert_message_passwordoneofthefieldsempty">One of the fields is empty</string>
    <string name="signup_second_title">CREATE ACCOUNT</string>
    <string name="signup_second_accurateinformationrequiredlabel">Please fill in your name and phone number</string>
    <string name="signup_second_hint_name">Name</string>
    <string name="signup_second_error_namemissing">Name missing</string>
    <string name="signup_second_hint_telephonenumber">Phone number</string>
    <string name="signup_second_error_phonemissing">Phone missing</string>
    <string name="signup_second_error_prefixmissing">Prefix missing</string>
    <string name="signup_second_uploadpicture_label">Upload profile picture</string>
    <string name="signup_second_next">Next</string>
    <string name="signup_second_back">Back</string>
    <string name="signup_second_alert_message_namecannotbeempty">Name required</string>
    <string name="signup_second_alert_message_prefixcannotbeempty">Prefix cannot be empty</string>
    <string name="signup_second_alert_message_phonecannotbeempty">Phone number required</string>
    <string name="signup_second_alert_message_phonenumberisshort">Phone number is too short</string>
    <string name="signup_third_safelet_communitytitle">SAFELET GUARDIAN NETWORK</string>
    <string name="signup_third_safelet_communitymessage">Because you also believe that Safety is what we do for each other, we invite you to join the Safelet Guardian network. If another member needs help and you are near that location, you will receive an alert.</string>
    <string name="signup_fourth_dialog_title_success">Success!</string>
    <string name="signup_fourth_dialog_title">Message</string>
    <string name="signup_fourth_dialog_title_message_accountcreatedsuccess">Succes! Your account has been created</string>
    <string name="change_email_dialog_title">Message</string>
    <string name="change_email_dialog_message_successfullyupdated">Email address successfully updated!</string>
    <string name="change_email_alert_message_invalidemailaddress">Invalid email address</string>
    <string
        name="change_email_alert_message_emailcannotbeempty">Email field cannot be empty!</string>
    <string name="change_email_title">Change email</string>
    <string name="change_email_button_change">Change email</string>
    <string name="change_password_title">Change password</string>
    <string name="change_password_hint_currentpassword">Current password</string>
    <string name="change_password_currentpasswordnotvalid">Current password not valid</string>
    <string name="change_password_hint_newpassword">New password</string>
    <string name="change_password_hint_repeatnewpassword">Repeat new password</string>
    <string name="change_password_wrongpassword">Wrong password</string>
    <string name="change_password_button">Change password</string>
    <string name="change_password_forgot">Forgot password</string>
    <string name="change_password_dialog_title">Message</string>
    <string name="change_password_dialog_message_successfullyupdated">Password has been changed successfully</string>
    <string
        name="change_password_alert_message_passwordcannotbeempty">Password cannot be empty</string>
    <string name="change_password_alert_message_passworddontmatch">Passwords do not match</string>
    <string name="change_password_alert_message_passwordsame">New password is the same as current password</string>
    <string name="change_phone_title">Change Phone number</string>
    <string name="change_phone_prefix">+</string>
    <string name="change_phone_hint_telephone">Phone number</string>
    <string name="change_phone_error_phonemissing">Phone number missing</string>
    <string name="change_phone_error_prefixmissing">Prefix missing</string>
    <string name="change_phone_prefix_title">Prefix</string>
    <string name="change_phone_submitbutton">Change phone number</string>
    <string
        name="change_phone_number_alert_phonecannotbeempty">Phone number cannot be empty</string>
    <string name="change_phone_number_alert_prefixcannotbeempty">Prefix cannot be empty</string>
    <string name="change_phone_dialog_title">Message</string>
    <string name="change_phone_dialog_message_successfullyupdated">Phone number successfully updated!</string>
    <string name="crop_screen_cancel">Cancel</string>
    <string name="crop_screen_done">Done</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="forgot_password_button_resetpassword">Reset password</string>
    <string name="forgot_password_hint_email">Email</string>
    <string name="forgot_password_alert_warning">Warning</string>
    <string name="forgot_password_forgotpassword">FORGOT PASSWORD</string>
    <string name="forgot_password_login">Log in</string>
    <string name="forgot_password_register">Register</string>
    <string name="forgot_password_dialog_title">Message</string>
    <string name="forgot_password_dialog_message_successfullyupdated">A password reset email has been sent to your email address</string>
    <string name="forgot_password_alert_emailcannotbeempty">Email cannot be empty</string>
    <string name="forgot_password_alert_usernotanemail">User not an email</string>
    <string name="invite_guardians_dialog_message_interneterror">Unable to retrieve contacts. Please check your Internet connection</string>
    <string name="invite_guardians_dialog_message_activeinternetconnectionrequirederror">You need an active Internet connection to retrieve your contacts. Do you want to turn on your Internet connection?</string>
    <string name="invite_guardians_text">Hello, do you want to help me in case of an emergency? Download the Safelet App and when I need your help, I can send you an alarm with my location.\niOS: http://bit.ly/Safelet-iOS\nAndroid: http://bit.ly/Safelet-Android</string>
    <string
        name="invite_guardians_unabletosendinvitationdueto">Unable to send invitation due to</string>
    <string name="invite_non_user_successfully">Successfully invited user to be your guardian and join to Safelet.</string>
    <string name="invite_non_user_failed">Failed to invite user to join to Safelet.</string>
    <string name="invite_guardians_title_success">Success</string>
    <string name="invite_guardians_title_failed">Failed</string>
    <string name="invite_action_requestasguardian">Request as Guardian</string>
    <string name="invite_action_cancelrequest">Cancel invitation</string>
    <string name="home_drawer_title">Safelet</string>
    <string name="home_dialog_logout_title">Warning</string>
    <string
        name="home_dialog_logout_message">Are you sure you want to log out of the application?</string>
    <string name="home_dialog_title">Message</string>
    <string name="home_dialog_message_networkerror">No internet connection.</string>
    <string name="home_feedback_title">Support</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="home_logout_title">Log Out</string>
    <string name="alert_pop_ineedhelp">You\'ve requested help!</string>
    <string name="alert_pop_needshelp_1">%s needs your help</string>
    <string name="alert_pop_peopleneedshelp">%s people need your help</string>
    <string name="alert_pop_recording_stop">Recording has stopped because the maximum recording size was reached</string>
    <string name="connections_title">SAFETY NETWORK</string>
    <string name="connections_myguardians_label">My Guardians</string>
    <string name="connections_imguarding_label">I\'m guarding</string>
    <string
        name="connections_you_have_no_guardians_label">YOU HAVE &lt;br /&gt;NO GUARDIANS</string>
    <string name="connections_you_can_start_adding_label">Invite Guardians</string>
    <string name="connections_seelastcheckin_title">See last check-in</string>
    <string name="connections_cancel_label">Cancel</string>
    <string name="connections_actionsforuser_label">Actions for user&#160;</string>
    <string name="connections_removeguardian_label">Remove Guardian</string>
    <string name="connections_stopguarding_label">Stop guarding</string>
    <string name="safelet_pair_wizard_connect_failed">Failed to connect to the Safelet bracelet. Perform one of the actions below then attempt to re-connect by selecting \"Connect Safelet\" from the menu:</string>
    <string
        name="safelet_pair_wizard_failed_info">Hold for 10 seconds, until the red light appears</string>
    <string name="safelet_pair_wizard_first_info">・ Reset the Android device</string>
    <string name="safelet_pair_wizard_second_info">・ Hard reset your Safelet bracelet</string>
    <string name="options_app_version">Application version</string>
    <string name="options_category_safelet">Safelet</string>
    <string name="options_device_info_title">Safelet Information</string>
    <string name="options_device_info_description">Show all Safelet device information</string>
    <string name="options_firmware_update_title">Safelet Firmware Update</string>
    <string name="options_firmware_update_desc">Check for new Safelet Firmware updates</string>
    <string name="privacy"><u>Privacy Policy</u></string>
</resources>