<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.safelet.android.views.NotificationPopUpNetworkErrorView
        android:id="@+id/notificationPopUpNetworkErrorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/change_pass_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notificationPopUpNetworkErrorView"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/change_pass_current_et"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/input_box"
            android:ems="10"
            android:hint="@string/change_password_hint_currentpassword"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/gray_input_color_text"
            android:textColorHint="@color/gray_input_color_hint" />

        <TextView
            android:id="@+id/change_pass_current_alert_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:padding="10dp"
            android:text="@string/change_password_currentpasswordnotvalid"
            android:textColor="@color/red_alert_text" />

        <EditText
            android:id="@+id/change_pass_new_password_et"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_box"
            android:ems="10"
            android:hint="@string/change_password_hint_newpassword"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/gray_input_color_text"
            android:textColorHint="@color/gray_input_color_hint" />

        <EditText
            android:id="@+id/change_pass_new_repeat_password_et"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/input_box"
            android:ems="10"
            android:hint="@string/change_password_hint_repeatnewpassword"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/gray_input_color_text"
            android:textColorHint="@color/gray_input_color_hint" />

        <TextView
            android:id="@+id/change_pass_password_alert_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:padding="10dp"
            android:text="@string/change_password_wrongpassword"
            android:textColor="@color/red_alert_text" />

        <Button
            android:id="@+id/change_pass_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_button_safelet_red"
            android:text="@string/change_password_button"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:id="@+id/View1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/change_pass_ll" />

    <TextView
        android:id="@+id/change_pass_forgot_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:padding="10dp"
        android:text="@string/change_password_forgot"
        android:textColor="@color/gray_text_login"
        android:textSize="16sp" />

</RelativeLayout>