<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.safelet.android.views.AlarmView
        android:id="@+id/globalAlertPopView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notificationPopUpNetworkErrorView"
        android:visibility="gone" />

    <com.safelet.android.views.NotificationPopUpNetworkErrorView
        android:id="@+id/notificationPopUpNetworkErrorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/globalAlertPopView"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/options_category_safelet"
            android:textSize="17sp" />

        <LinearLayout
            android:id="@+id/safeletInformationsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/options_device_info_title"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/options_device_info_description"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dddddd" />

        <LinearLayout
            android:id="@+id/firmwareUpdateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/options_firmware_update_title"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/options_firmware_update_desc"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dddddd" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/options_app_version"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/appVersionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1.0"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>