<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="20dp"
    tools:ignore="MissingPrefix">

    <ImageView
        android:id="@+id/background_wings"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:alpha="1.0"
        android:src="@drawable/vlinder_background_10p" />

    <com.safelet.android.views.NotificationPopUpNetworkErrorView
        android:id="@+id/notificationPopUpNetworkErrorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/forgot_reset_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/forgot_alert_tv"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/selector_button_safelet_red"
        android:text="@string/forgot_password_button_resetpassword"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/forgot_email_et"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/forgot_title_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_box"
        android:ems="10"
        android:hint="@string/forgot_password_hint_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/gray_input_color_text"
        android:textColorHint="@color/gray_input_color_hint" />

    <TextView
        android:id="@+id/forgot_alert_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_email_et"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/forgot_password_alert_warning"
        android:textColor="@color/red_alert_text"
        android:visibility="gone" />

    <TextView
        android:id="@+id/forgot_title_tv"
        fontPath="fonts/SourceSansPro-ExtraLight.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_password_iv"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/forgot_password_forgotpassword"
        android:textColor="@color/gray_text"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/forgot_password_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/forgot_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forgot_register_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:text="@string/forgot_password_login"
        android:textColor="@color/gray_text_login"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/forgot_register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:text="@string/forgot_password_register"
        android:textColor="@color/gray_text_login"
        android:textSize="16sp" />

</RelativeLayout>