<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_wings"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:alpha="1.0"
        android:src="@drawable/vlinder_background_10p"
        android:visibility="visible"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/logincreate_login_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/selector_button_safelet_red"
        android:text="@string/login_create_login"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/logincreate_create_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/logincreate_login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_gray_button"
        android:text="@string/login_create_create"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:layout_marginBottom="40dp"
        android:text="@string/privacy"
        android:textAllCaps="false" />

</RelativeLayout>